# FastAPI-Link-Parser

./: alembic.ini  main.py  pyproject.toml  report.html
alembic/versions/: 40cafcbf74b1_add_matchrows.py  81707e767800_initial_migration.py  87efa88a8269_create_metrics.py
app/: crawler.py  database.py  models.py  redis.py
app/api/: server.py
app/api/routes/: __init__.py
app/api/routes/public/: __init__.py
app/api/routes/public/crawler/: __init__.py  calc_metrics.py  generate_html.py  get_links.py  get_words.py  router.py  search.py  start.py
app/dto/: responses.py
